# ImaginaryOver2

./: .gitignore  config.py  default_scene.py  dict_comprehension.py  font_examples.py  manim.cfg  pyproject.toml
_2023/: 01_list_comprehension.py
_2024/: 03_dict.py
examples/: BasicAnimation.py  dict_comprehension.py  list_comprehension.py
helper/: code_helper.py  title_helper.py
quickstart/: learning.py  test.py
yt/_2023/: 01_list_comprehension.py
yt/_2024/: 02_dict_comprehension.py  03_dict.py
yt/config/: config.py
yt/core/: dict_of_mobject.py  dict_of_text.py  list_of_text.py
yt/examples/: BasicAnimation.py  config.py  test_paragraph.py  test_segmented_text.py  test_table.py
yt/helper/: code_helper.py  fade_out_helper.py  title_helper.py
