[tool.poetry]
name = "yt"
version = "0.1.0"
description = ""
authors = ["William Pepin <wpepin00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
manim = "^0.17.3"
scipy = "^1.11.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
